Fix cutting content when browser bar was visible

--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -15,7 +15,7 @@
   -webkit-box-align: center;
   align-items: center;
   z-index: 10;
-  height: calc(100vh - 5rem);
+  height: calc(100% - 5rem);
   -webkit-transition: -webkit-transform 0.4s ease-in;
   transition: -webkit-transform 0.4s ease-in;
   transition: transform 0.4s ease-in;
